Add maven to user configuration