@@ -192,6 +192,30 @@ cat <<EOF >> ~/.guile
 EOF
 
 
+# configure maven
+cat <<EOF >> ~/.m2/settings.xml
+<settings>
+    <profiles>
+        <profile>
+            <id>downloadSources</id>
+            <properties>
+                <downloadSources>true</downloadSources>
+                <downloadJavadocs>true</downloadJavadocs>
+            </properties>
+        </profile>
+    </profiles>
+
+    <activeProfiles>
+        <activeProfile>downloadSources</activeProfile>
+    </activeProfiles>
+</settings>
+EOF
+
+cat <<EOF >> ~/.mvn/jvm.config
+--add-opens=java.base/java.lang=ALL-UNNAMED
+EOF
+
+
 # configure screen
 cat <<EOF >> ~/.screenrc
 # See the Screen FAQ,
